fix wrap bug remove readmore to vendor directory

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -9,6 +9,12 @@
   margin: auto;
 }
 
+p.lead.small.authors {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .description {
   overflow: hidden;
 }
